dnl Process this file with autoconf to produce a configure script.
AC_REVISION([configure.in 1.00])
AC_INIT(vpp.c)		
AC_CONFIG_HEADER()

#############################################################################
#
#	The purpose of the configure script is to determine the following
#	for the Makefile: compiler, flags, lex, yacc, and libs.
#
#############################################################################

# We want these before the checks, so the checks can modify their values.

test -z "$LIBS" && LIBS=-lm AC_SUBST(LIBS)

dnl **** Command-line arguments ****

dnl None

dnl **** Check for some programs and libraries ****

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_YACC
AC_PROG_LEX

dnl **** Special fixups for specific compilers and programs

if test ".${GCC}." = ".yes."
then
	CFLAGS="$CFLAGS -ansi -pedantic -Wall"
fi

if test -n "$YACC"
then
	YACC="$YACC -d"
fi

dnl **** Check for functions and header files ****

AC_HEADER_STDC()

dnl **** Generate output files ****

AC_OUTPUT([
Makefile
])

echo
echo "Configure finished.  Do 'make depend; make vpp' to compile VBPP."
echo


dnl Local Variables:
dnl comment-start: "dnl "
dnl comment-end: ""
dnl comment-start-skip: "\\bdnl\\b\\s *"
dnl compile-command: "autoconf"
dnl End:
